src/index.css
@import url('https://fonts.googleapis.com/css?family=Inter+Tight:100,200,400,600,900');
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:100,200,400,600,900');
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  border: 0;
  outline: 0;
  padding: 0;

  font-family: 'Inter Tight', -apple-system, BlinkMacSystemFont, 'Segoe UI',
    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
    'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Playfair Display';
}

p {
  font-family: 'Inter Tight';
}

hr {
  height: 2px;
  border: none;
}

.bg-grid {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgba(0, 0, 0, 0.03)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

.section {
  padding: 0 14rem;
  height: 100vh;
  width: 100vw;
}

@media (max-width: 1024px) {
  .section {
    padding: 0 7rem;
  }
}

@media (max-width: 640px) {
  .section {
    padding: 0 2rem;
  }
}

section,
footer,
hr {
  transition: background-color 1s ease-in-out;
}

footer,
header,
aside {
  transition: border-color 1s ease-in-out;
}

h1,
p,
i,
ul {
  transition: color 0.5s ease-in-out;
}

